Update cities form styling, update card structure and styling, fix card alignment

--- a/css/style.css
+++ b/css/style.css
@@ -135,26 +135,32 @@ body {
         color: #333; }
 
 .cities {
-  height: 100rem;
   width: 100%;
-  padding: 5rem; }
+  padding: 0 5rem; }
   .cities__form {
-    margin-bottom: 3rem; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem; }
     .cities__form__input {
       height: 3rem;
-      width: 25%;
+      width: 50%;
       padding-left: 2rem;
       margin-right: 1rem; }
   .cities__row {
     display: grid;
-    grid-template-columns: 50% 50%; }
+    grid-template-columns: 33.33% 33.33% 33.33%; }
     .cities__row__card {
-      width: 90%;
       margin-bottom: 3rem;
       border: 0.1rem solid red;
       border-radius: 0.5rem;
       text-align: center;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+      width: 95%;
+      margin: 0 auto;
       transition: all 0.4s ease; }
+      .cities__row__card:hover {
+        transform: scale(1.01); }
       .cities__row__card__img {
         width: 100%;
         height: 30rem;
@@ -163,8 +169,9 @@ body {
         border-top-right-radius: 0.2rem;
         background-size: cover; }
       .cities__row__card__content {
-        padding: 1rem; }
+        padding: 2rem; }
         .cities__row__card__content__title {
+          margin-bottom: 0.5rem;
           font-size: 3rem;
           color: #333; }
         .cities__row__card__content__description {
@@ -184,9 +191,6 @@ body {
             .cities__row__card__content__section__place__description {
               padding: 1rem;
               font-size: 1.4rem; }
-      .cities__row__card:hover {
-        transform: scale(1.03);
-        box-shadow: 0.5rem 0.5rem 1.5rem rgba(0, 0, 0, 0.6); }
 
 .contact {
   height: 100vh;
